scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/jsdocTypeReferenceToImportOfFunctionExpression.errors.txt
MW.js(1,15): error TS1340: Module './MC' does not refer to a type, but is used as a type here. Did you mean 'typeof import('./MC')'?


==== MC.js (0 errors) ====
    const MW = require("./MW");
    
    /** @typedef {number} Meyerhauser */
    
    /** @class */
    module.exports = function MC() {
        /** @type {any} */
        var x = {}
        return new MW(x);
    };
    
==== MW.js (1 errors) ====
    /** @typedef {import("./MC")} MC */
                  ~~~~~~~~~~~~~~
!!! error TS1340: Module './MC' does not refer to a type, but is used as a type here. Did you mean 'typeof import('./MC')'?
    
    class MW {
      /**
       * @param {MC} compiler the compiler
       */
      constructor(compiler) {
        this.compiler = compiler;
      }
    }
    
    module.exports = MW;
    